Refactored code for better readability and efficiency
The refactoring involved updates to the logging system, replacing `+` concatenation with placeholders (`{}`) for more efficient string operations, and simplifying `.collect(Collectors.toList())` to `.toList()`. The code for String comparison and assignment was also optimized for better code brevity and readability. Updates were made across `CampaignGUI.java` and `CustomizePersonDialog.java` files.